--- a/ublox_gps/config/m8n.yaml
+++ b/ublox_gps/config/m8n.yaml
@@ -7,7 +7,7 @@ save:
                             # Manager, Antenna, and Logging Configuration
   device: 3                 # Save to EEPROM
 
-ratedevice: /dev/ttyACM0
+ratedevice: /dev/ttyUSB0
 frame_id: gps
 rate: 5                     # in Hz
 nav_rate: 1                 # [# of measurement cycles], recommended 1 Hz, may 
@@ -23,13 +23,18 @@ dr_limit: 0
 
 uart1:
   baudrate: 19200           # C94-M8P specific
-  in: 32                    # RTCM 3
-  out: 0                    # No UART out for rover
+  in: 3                    # RTCM 3
+  out: 3                    # No UART out for rover
 
 gnss:
   glonass: true             # Supported by C94-M8P
   beidou: false             # Supported by C94-M8P
   qzss: false               # Supported by C94-M8P
+  sbas: true
+
+sbas:
+  max_sbas: 3
+  usage: 3
 
 dgnss_mode: 3               # Fixed mode
 
