--- a/ublox_gps/config/c94_m8p_rover.yaml
+++ b/ublox_gps/config/c94_m8p_rover.yaml
@@ -7,7 +7,7 @@ save:
                             # Manager, Antenna, and Logging Configuration
   device: 3                 # Save to EEPROM
 
-ratedevice: /dev/ttyACM0
+device: /dev/ttyACM0
 frame_id: gps
 rate: 5                     # in Hz
 nav_rate: 1                 # [# of measurement cycles], recommended 1 Hz, may 
