--- a/ublox_gps/config/m8n.yaml
+++ b/ublox_gps/config/m8n.yaml
@@ -7,7 +7,7 @@ save:
                             # Manager, Antenna, and Logging Configuration
   device: 3                 # Save to EEPROM
 
-ratedevice: /dev/ttyUSB0
+device: /dev/ttyUSB1
 frame_id: gps
 rate: 5                     # in Hz
 nav_rate: 1                 # [# of measurement cycles], recommended 1 Hz, may 
@@ -22,7 +22,7 @@ enable_ppp: false           # Not supported by C94-M8P
 dr_limit: 0
 
 uart1:
-  baudrate: 19200           # C94-M8P specific
+  baudrate: 115200           # C94-M8P specific
   in: 3                    # RTCM 3
   out: 3                    # No UART out for rover
 
@@ -33,7 +33,7 @@ gnss:
   sbas: true
 
 sbas:
-  max_sbas: 3
+  max: 3
   usage: 3
 
 dgnss_mode: 3               # Fixed mode
